Fixed bug #43332 (self and parent as type hint in namespace)